add missing function in OpenCVPicker

--- a/conda-environments/dlc-uptodate-gpu.yaml
+++ b/conda-environments/dlc-uptodate-gpu.yaml
@@ -18,6 +18,7 @@ dependencies:
     - tqdm
     - pip
     - pip:
+        - ruamel.yaml
         - easydict
         - moviepy
         - scikit-video
